--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "autoprefixer": "^10.2.4",
     "babel-jest": "^26.6.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
-    "react-test-renderer": "^17.0.1"
+    "postcss": "^8.2.6",
+    "react-test-renderer": "^17.0.1",
+    "tailwindcss": "^2.0.3"
   }
 }
