--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-use": "^17.1.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.2.1",
