--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,15 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Main CI/CD
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [main]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.4
-        with:
-          node-version: 12.13.0
-
-      - name: Install JS dependencies
-        run: yarn install
-
-      - name: Install JS dependencies
-        run: yarn test
-
-  build-and-deploy:
+  build-test-and-deploy:
     needs: test
     runs-on: ubuntu-latest
 
@@ -47,6 +25,9 @@ jobs:
 
       - name: Install JS dependencies
         run: yarn install
+
+      - name: Install JS dependencies
+        run: yarn test
 
       - name: Build
         run: yarn build
