--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
+    "devDebug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build && next export",
     "start": "next start",
     "test": "jest"
